<resources>
    <string name="app_name">Punto1_practica1</string>
    <string name="Cuadro">cuadro</string>
    <string name="Circulo">Circulo</string>
    <string name="Triangulo">Triangulo</string>
    <string name="Cubo">Cubo</string>
    <string name="Lado">Lado</string>
    <string name="Radio">Radio</string>
    <string name="Base">Base</string>
    <string name="Altura">Altura</string>
</resources>
