<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.esteban_ramirez_osorio.punto1_practica1.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.1"
            android:orientation="horizontal">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:text="@string/Circulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:id="@+id/rCuadrado"/>

                <RadioButton
                    android:text="@string/Cuadro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:id="@+id/rCirculo"/>

                <RadioButton
                    android:text="@string/Triangulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:id="@+id/rTriangulo"/>
                <RadioButton
                    android:text="@string/Cubo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:id="@+id/rCubo"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.7"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tLado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Lado"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:visibility="invisible"/>
                <EditText
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/eLado"
                    android:visibility="invisible"/>
                <TextView
                    android:id="@+id/tRadio"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Radio"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>
                <EditText
                    android:inputType="number"
                    android:visibility="invisible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/eRadio"/>

                <TextView
                    android:id="@+id/tBase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Base"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:visibility="invisible"/>
                <EditText
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ebase"
                    android:visibility="invisible"/>
                <TextView
                    android:id="@+id/tAltura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Altura"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:visibility="invisible"/>
                <EditText
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/eAltura"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/tArea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>



            </LinearLayout>

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="0.2"></LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="0.6">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/tFondo"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="0.2">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Calcular area,perimetro y volumen"
                        android:id="@+id/bBoton"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
